src/lib/envfile/parsing/envfileParser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

"use strict";

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Document: peg$parseDocument,
  };
  let peg$startRuleFunction = peg$parseDocument;

  const peg$c0 = "file";
  const peg$c1 = "do";
  const peg$c2 = "end";
  const peg$c3 = "\"";
  const peg$c4 = "'";
  const peg$c5 = "encrypted";
  const peg$c6 = "redacted";
  const peg$c7 = "env";
  const peg$c8 = ",";
  const peg$c9 = "proxy";
  const peg$c10 = ":";
  const peg$c11 = "required";
  const peg$c12 = "optional";
  const peg$c13 = "type";
  const peg$c14 = "enum";
  const peg$c15 = "min";
  const peg$c16 = "max";
  const peg$c17 = "[";
  const peg$c18 = "]";
  const peg$c19 = "\\";
  const peg$c20 = "\"integer\"";
  const peg$c21 = "'integer'";
  const peg$c22 = "\"boolean\"";
  const peg$c23 = "'boolean'";
  const peg$c24 = "\"port\"";
  const peg$c25 = "'port'";
  const peg$c26 = "\"url\"";
  const peg$c27 = "'url'";
  const peg$c28 = "\"email\"";
  const peg$c29 = "'email'";
  const peg$c30 = "\"ip\"";
  const peg$c31 = "'ip'";
  const peg$c32 = "true";
  const peg$c33 = "{";
  const peg$c34 = "domain";
  const peg$c35 = "}";
  const peg$c36 = "false";
  const peg$c37 = "#";
  const peg$c38 = "\r\n";

  const peg$r0 = /^[ \t]/;
  const peg$r1 = /^[^"\r\n\0]/;
  const peg$r2 = /^[^'\r\n\0]/;
  const peg$r3 = /^[+\-]/;
  const peg$r4 = /^[0-9]/;
  const peg$r5 = /^[^"\\\r\n]/;
  const peg$r6 = /^[^'\\\r\n]/;
  const peg$r7 = /^["'\\nrt]/;
  const peg$r8 = /^[A-Za-z0-9.\-]/;
  const peg$r9 = /^[A-Za-z_]/;
  const peg$r10 = /^[A-Za-z0-9_]/;
  const peg$r11 = /^[^\r\n]/;
  const peg$r12 = /^[\n\r]/;

  const peg$e0 = peg$literalExpectation("file", false);
  const peg$e1 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e2 = peg$literalExpectation("do", false);
  const peg$e3 = peg$literalExpectation("end", false);
  const peg$e4 = peg$anyExpectation();
  const peg$e5 = peg$otherExpectation("a quoted filename");
  const peg$e6 = peg$literalExpectation("\"", false);
  const peg$e7 = peg$classExpectation(["\"", "\r", "\n", "\0"], true, false, false);
  const peg$e8 = peg$literalExpectation("'", false);
  const peg$e9 = peg$classExpectation(["'", "\r", "\n", "\0"], true, false, false);
  const peg$e10 = peg$literalExpectation("encrypted", false);
  const peg$e11 = peg$literalExpectation("redacted", false);
  const peg$e12 = peg$literalExpectation("env", false);
  const peg$e13 = peg$literalExpectation(",", false);
  const peg$e14 = peg$literalExpectation("proxy", false);
  const peg$e15 = peg$literalExpectation(":", false);
  const peg$e16 = peg$literalExpectation("required", false);
  const peg$e17 = peg$literalExpectation("optional", false);
  const peg$e18 = peg$literalExpectation("type", false);
  const peg$e19 = peg$literalExpectation("enum", false);
  const peg$e20 = peg$literalExpectation("min", false);
  const peg$e21 = peg$literalExpectation("max", false);
  const peg$e22 = peg$otherExpectation("an integer");
  const peg$e23 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e24 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e25 = peg$literalExpectation("[", false);
  const peg$e26 = peg$literalExpectation("]", false);
  const peg$e27 = peg$classExpectation(["\"", "\\", "\r", "\n"], true, false, false);
  const peg$e28 = peg$classExpectation(["'", "\\", "\r", "\n"], true, false, false);
  const peg$e29 = peg$literalExpectation("\\", false);
  const peg$e30 = peg$classExpectation(["\"", "'", "\\", "n", "r", "t"], false, false, false);
  const peg$e31 = peg$otherExpectation("a supported type (integer, boolean, port, url, email, or ip)");
  const peg$e32 = peg$literalExpectation("\"integer\"", false);
  const peg$e33 = peg$literalExpectation("'integer'", false);
  const peg$e34 = peg$literalExpectation("\"boolean\"", false);
  const peg$e35 = peg$literalExpectation("'boolean'", false);
  const peg$e36 = peg$literalExpectation("\"port\"", false);
  const peg$e37 = peg$literalExpectation("'port'", false);
  const peg$e38 = peg$literalExpectation("\"url\"", false);
  const peg$e39 = peg$literalExpectation("'url'", false);
  const peg$e40 = peg$literalExpectation("\"email\"", false);
  const peg$e41 = peg$literalExpectation("'email'", false);
  const peg$e42 = peg$literalExpectation("\"ip\"", false);
  const peg$e43 = peg$literalExpectation("'ip'", false);
  const peg$e44 = peg$otherExpectation("true or false");
  const peg$e45 = peg$literalExpectation("true", false);
  const peg$e46 = peg$literalExpectation("{", false);
  const peg$e47 = peg$literalExpectation("domain", false);
  const peg$e48 = peg$literalExpectation("}", false);
  const peg$e49 = peg$literalExpectation("false", false);
  const peg$e50 = peg$otherExpectation("a quoted domain");
  const peg$e51 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], ".", "-"], false, false, false);
  const peg$e52 = peg$otherExpectation("a quoted variable name");
  const peg$e53 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false, false);
  const peg$e54 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, false);
  const peg$e55 = peg$literalExpectation("#", false);
  const peg$e56 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e57 = peg$literalExpectation("\r\n", false);
  const peg$e58 = peg$classExpectation(["\n", "\r"], false, false, false);

  function peg$f0(defaults, entries) {
    return { encrypted: false, redacted: true, ...defaults, declarations: entries.map(item => item[0]).filter(item => !item.file), files: entries.map(item => item[0]).filter(item => item.file) };
  }
  function peg$f1(file, defaults, declarations) {
    return { file, ...defaults, declarations: declarations.map(item => item[0]) };
  }
  function peg$f2(value) {    return value;  }
  function peg$f3(value) {    return value;  }
  function peg$f4(key, value) {    return { key, value };  }
  function peg$f5(items) {
    const defaults = {};
    for (const { key, value } of items) {
      if (key in defaults) error(`Duplicate Envfile default: ${key}`);
      defaults[key] = value;
    }
    return defaults;
  }
  function peg$f6(name, options) {
    const declaration = { name };
    const seen = new Set();
    for (const option of options) {
      if (seen.has(option.key)) error(`Duplicate Envfile option: ${option.key}`);
      if ((option.key === "optional" && seen.has("required")) ||
          (option.key === "required" && seen.has("optional"))) {
        error("Cannot combine required and optional in an Envfile declaration");
      }
      seen.add(option.key);
      if (option.key === "optional") declaration.required = !option.value;
      else declaration[option.key] = option.value;
    }
    return declaration;
  }
  function peg$f7(value) {    return { key: "proxy", value };  }
  function peg$f8(value) {    return { key: "required", value };  }
  function peg$f9(value) {    return { key: "optional", value };  }
  function peg$f10(value) {    return { key: "redacted", value };  }
  function peg$f11(value) {    return { key: "encrypted", value };  }
  function peg$f12(value) {    return { key: "type", value };  }
  function peg$f13(value) {    return { key: "enum", value };  }
  function peg$f14(key, value) {    return { key, value };  }
  function peg$f15(value) {    return value;  }
  function peg$f16(first, value) {    return value;  }
  function peg$f17(first, rest) {
    return [first, ...rest];
  }
  function peg$f18(chars) {    return chars.join("");  }
  function peg$f19(chars) {    return chars.join("");  }
  function peg$f20(char) {
    return ({ n: "\n", r: "\r", t: "\t" })[char] || char;
  }
  function peg$f21() {    return "integer";  }
  function peg$f22() {    return "boolean";  }
  function peg$f23() {    return "port";  }
  function peg$f24() {    return "url";  }
  function peg$f25() {    return "email";  }
  function peg$f26() {    return "ip";  }
  function peg$f27() {    return true;  }
  function peg$f28(domain) {    return { domain };  }
  function peg$f29() {    return false;  }
  function peg$f30(host) {    return host;  }
  function peg$f31(host) {    return host;  }
  function peg$f32(name) {    return name;  }
  function peg$f33(name) {    return name;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseDefaults();
    s3 = peg$parse_();
    s4 = [];
    s5 = peg$currPos;
    s6 = peg$parseFileBlock();
    if (s6 === peg$FAILED) {
      s6 = peg$parseDeclaration();
    }
    if (s6 !== peg$FAILED) {
      s7 = peg$parse_();
      s6 = [s6, s7];
      s5 = s6;
    } else {
      peg$currPos = s5;
      s5 = peg$FAILED;
    }
    while (s5 !== peg$FAILED) {
      s4.push(s5);
      s5 = peg$currPos;
      s6 = peg$parseFileBlock();
      if (s6 === peg$FAILED) {
        s6 = peg$parseDeclaration();
      }
      if (s6 !== peg$FAILED) {
        s7 = peg$parse_();
        s6 = [s6, s7];
        s5 = s6;
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s0 = peg$f0(s2, s4);

    return s0;
  }

  function peg$parseFileBlock() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r0.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = input.charAt(peg$currPos);
          if (peg$r0.test(s3)) {
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseFilename();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = input.charAt(peg$currPos);
          if (peg$r0.test(s5)) {
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = input.charAt(peg$currPos);
              if (peg$r0.test(s5)) {
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e1); }
              }
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c1) {
              s5 = peg$c1;
              peg$currPos += 2;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = input.charAt(peg$currPos);
              if (peg$r0.test(s7)) {
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e1); }
              }
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = input.charAt(peg$currPos);
                if (peg$r0.test(s7)) {
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e1); }
                }
              }
              s7 = peg$parseComment();
              if (s7 === peg$FAILED) {
                s7 = null;
              }
              s8 = peg$parseNewline();
              if (s8 !== peg$FAILED) {
                s9 = peg$parse_();
                s10 = peg$parseDefaults();
                s11 = peg$parse_();
                s12 = [];
                s13 = peg$currPos;
                s14 = peg$parseDeclaration();
                if (s14 !== peg$FAILED) {
                  s15 = peg$parse_();
                  s14 = [s14, s15];
                  s13 = s14;
                } else {
                  peg$currPos = s13;
                  s13 = peg$FAILED;
                }
                while (s13 !== peg$FAILED) {
                  s12.push(s13);
                  s13 = peg$currPos;
                  s14 = peg$parseDeclaration();
                  if (s14 !== peg$FAILED) {
                    s15 = peg$parse_();
                    s14 = [s14, s15];
                    s13 = s14;
                  } else {
                    peg$currPos = s13;
                    s13 = peg$FAILED;
                  }
                }
                if (input.substr(peg$currPos, 3) === peg$c2) {
                  s13 = peg$c2;
                  peg$currPos += 3;
                } else {
                  s13 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e3); }
                }
                if (s13 !== peg$FAILED) {
                  s14 = [];
                  s15 = input.charAt(peg$currPos);
                  if (peg$r0.test(s15)) {
                    peg$currPos++;
                  } else {
                    s15 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e1); }
                  }
                  while (s15 !== peg$FAILED) {
                    s14.push(s15);
                    s15 = input.charAt(peg$currPos);
                    if (peg$r0.test(s15)) {
                      peg$currPos++;
                    } else {
                      s15 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e1); }
                    }
                  }
                  s15 = peg$parseComment();
                  if (s15 === peg$FAILED) {
                    s15 = null;
                  }
                  s16 = peg$parseNewline();
                  if (s16 === peg$FAILED) {
                    s16 = peg$currPos;
                    peg$silentFails++;
                    if (input.length > peg$currPos) {
                      s17 = input.charAt(peg$currPos);
                      peg$currPos++;
                    } else {
                      s17 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e4); }
                    }
                    peg$silentFails--;
                    if (s17 === peg$FAILED) {
                      s16 = undefined;
                    } else {
                      peg$currPos = s16;
                      s16 = peg$FAILED;
                    }
                  }
                  if (s16 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f1(s3, s10, s12);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFilename() {
    let s0, s1, s2, s3, s4;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 34) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r1.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = input.charAt(peg$currPos);
          if (peg$r1.test(s4)) {
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e7); }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 34) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 39) {
        s1 = peg$c4;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = [];
        s4 = input.charAt(peg$currPos);
        if (peg$r2.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e9); }
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = input.charAt(peg$currPos);
            if (peg$r2.test(s4)) {
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e9); }
            }
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s2 = input.substring(s2, peg$currPos);
        } else {
          s2 = s3;
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 39) {
            s3 = peg$c4;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f3(s2);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }

    return s0;
  }

  function peg$parseDefaults() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
